Fixed scroll issue on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,14 +1,15 @@
 footer{
     width: 100vw;
     margin: 0px;
+    opacity: 0.8;
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    font-size: 0.9em;
-    font-weight: 100;
-    color: #304352;
+    font-size: 0.8em;
+    font-weight: 600;
+    color: #333;
     padding: 12px;
     padding-top: 50px;
     text-align: center;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
