--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html{
 body{
     padding: 0px;
     margin: 0px;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6{
